<resources>
    <string name="app_name">Swim</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="txt_tap_scan_qr_code">Scan QR Code</string>
    <string name="txt_Welcome">Welcome</string>
    <string name="txt_list_order_id">Order Id :</string>
    <string name="txt_list_product_name">Product Name :</string>
    <string name="txt_list_product_qty">Product Qty :</string>
    <string name="txt_list_total_price">Total Price :</string>
    <string name="txt_list_delivery_address">Delivery Address :</string>
    <string name="txt_list_current_status">Current Status :</string>
    <string name="txt_submit_activity_register">Submit</string>
    <string name="txt_shop_while_on_the_move">Shop While On the Move</string>
</resources>
