<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#1C1E2D"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:background="@drawable/cart_for_order_2"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/txtOrderIdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:text="@string/txt_list_order_id"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:text="@string/txt_list_order_id"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtProductNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtOrderId"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_product_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtOrderId"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_product_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtProductQtyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductName"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_product_qty"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtProductQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductName"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_product_qty"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtProductPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductQty"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_total_price"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductQty"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_total_price"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDeliveryAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductPrice"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_delivery_address"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDeliveryAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductPrice"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lato_bold"
            android:padding="2dp"
            android:text="@string/txt_list_delivery_address"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCurrentStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDeliveryAddress"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="5dp"
            android:text="@string/txt_list_current_status"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCurrentStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDeliveryAddress"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="5dp"
            android:text="@string/txt_list_current_status"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>